syntax = "proto3";

option go_package = "STOCK_SERVICE/proto;proto";


service Stock{
  rpc SetStock(GoodsStockInfo) returns(BaseResp);
  rpc GetStock(GoodsStockInfo)returns(GoodsStockInfo);
  rpc BatchGetStock(GoodsListStock) returns(GoodsListStock);
  rpc ReduceStock(GoodsStockInfo) returns(GoodsStockInfo);
  rpc BatchReduceStock(GoodsListStock) returns(BaseResp);
  rpc RollbackStock(GoodsStockInfo) returns(GoodsStockInfo);
}


message GoodsStockInfo{
  int64 goodsId = 1;
  int64 num = 2;
  int64 OrderId = 3;
}

message GoodsListStock{
  repeated GoodsStockInfo data = 1;
}

message BaseResp{
  int32 code = 1;
  string msg = 2;
}


message StockInfoList {
  repeated GoodsStockInfo data = 1;
}